Navigation in structure elements | Structure element information

--- a/src/assets/css/obs.css
+++ b/src/assets/css/obs.css
@@ -196,3 +196,24 @@ span.large {
 .terminal-structure{
     background-color: rgb(255, 239, 239);
 }
+
+ul.breadcrumb {
+    list-style: none;
+}
+ul.breadcrumb li {
+    display: inline;
+    font-size: 18px;
+}
+ul.breadcrumb li+li:before {
+    padding: 8px;
+    color: black;
+    content: "/\00a0";
+}
+ul.breadcrumb li button {
+    color: #0275d8;
+    text-decoration: none;
+}
+ul.breadcrumb li button:hover {
+    color: #01447e;
+    text-decoration: none;
+}
