--- a/src/assets/css/obs.css
+++ b/src/assets/css/obs.css
@@ -82,10 +82,14 @@ main{
 
 .first-blue{
     background-color: rgb(206, 226, 243);
+    padding-left:5px;
+    padding-top:5px;
+    padding-bottom:5px;
 }
 
 .second-blue{
     background-color: rgb(230, 240, 249);
+    padding-left:5px;
 }
 
 .with-roof{
@@ -192,6 +196,10 @@ main.t-content{
     margin-bottom: 20px;
 }
 
+.bottom-spaced-quart{
+    margin-bottom:5px;
+}
+
 span.large {
     min-width: 200px;
 }
@@ -267,4 +275,12 @@ textarea {
     width:25px;
     color:white;
     cursor: pointer;
+}
+
+.spaced-row{
+    padding:5px;
+}
+
+.spaced-sub-row{
+    padding: 5px 10px;
 }
