--- a/src/assets/css/obs.css
+++ b/src/assets/css/obs.css
@@ -82,7 +82,6 @@ main{
 
 .first-blue{
     background-color: rgb(206, 226, 243);
-    padding-left:5px;
     padding-top:5px;
     padding-bottom:5px;
 }
@@ -94,10 +93,6 @@ main{
 
 .with-roof{
     border-top: 1px solid lightgray;
-}
-
-.with-roof:hover{
-    background-color: ghostwhite;
 }
 
 .c-modal-custom{
@@ -169,6 +164,7 @@ textarea{
 }
 
 .communist-button > span > svg {
+    cursor: pointer;
     fill: #9d0725;
 }
 
