--- a/src/assets/css/obs.css
+++ b/src/assets/css/obs.css
@@ -19,6 +19,11 @@ form{
     margin: 5px;
 }
 
+.spaced-top-bottom{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 .spaced-no-left{
     margin-right:5px;
     margin-top:5px;
